--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "framer-motion": "^12.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.4.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.1.1",
     "react-router-dom": "^7.1.1",
     "react-router-hash-link": "^2.4.3",
