--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
+  "engines": {
+    "npm": ">=8.0.0"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
-    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@fortawesome/react-fontawesome": "^3.1.1",
     "@tailwindcss/postcss": "^4.1.18",
+    "dependencies": "^0.0.1",
     "framer-motion": "^12.5.0",
+    "npm": "^11.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
